small changes and validated code

--- a/hem.html
+++ b/hem.html
@@ -15,10 +15,10 @@
             <div class="nav-item"><a href="hem.html">Hem</a></div>
             <div class="nav-item"><img alt ="Kattalogens logo" src="logo.svg"></div>
             <div class="nav-item"><a href="katalog.html">Katalog</a></div>
-        </nav>
+        </div>
     </nav>
     <main>
-        <div class="grid-container">
+        <div class="main-container">
             <div class="item0"><i class="bi bi-asterisk"></i></div>
             <div class="item1"><i class="bi bi-earbuds"></i></div>
             <div class="item2"><i class="bi bi-telephone"></i></div>
@@ -27,14 +27,14 @@
             <div class="item8"><i class="bi bi-collection"></i></div>
             <div class="item13">
                 <div>
-                    <h2>Söker du ett telefonnummer?</h2>
+                    <h3>Söker du ett telefonnummer?</h3>
                     <p>Kattalogen är en digital telefonkatalog.</p>
                     <a href="katalog.html" class="btn btn-outline-dark" role="button">Gå till katalogen</a>
                 </div>
             </div>
         </div>    
-        <div class="container">
-            <h3>Vill du komma i kontakt med oss?</h3>
+        <div class="form-container">
+            <h4>Vill du komma i kontakt med oss?</h4>
             <p>Skicka ett meddelande till oss via detta formulär så hör vi av oss så fort vi kan.</p>
             <form action="/action_page.php">
                 <div class="form-group">
