--- a/katalog.html
+++ b/katalog.html
@@ -14,7 +14,7 @@
             <div class="nav-item"><a href="hem.html">Hem</a></div>
             <div class="nav-item"><img alt ="Kattalogens logo" src="logo.svg"></div>
             <div class="nav-item"><a href="katalog.html">Katalog</a></div>
-        </nav>
+        </div>
     </nav>
     <main>
         <table>
