--- a/katalog.html
+++ b/katalog.html
@@ -5,7 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Företaget Kattalogen">
+    <meta name="keywords" content="kattalogen,telefonkatalog,telefonnummer">
     <link rel="stylesheet" href="stylekatalog.css">
+    <link rel="shortcut icon" href="favicon.ico" >
     <title>Kattalogens katalog</title>
 </head>
 <body>
